[gd_scene load_steps=6 format=3 uid="uid://18u8tf1ef227"]

[ext_resource type="Script" uid="uid://ivtq65i2au5n" path="res://scripts/MainMenu.gd" id="1_2wh52"]
[ext_resource type="Texture2D" uid="uid://vcaps1or0ws1" path="res://assets/images/background.png" id="1_yqorp"]
[ext_resource type="FontFile" uid="uid://cv053v58v05nd" path="res://assets/fonts/Roboto/Roboto-VariableFont_wdth,wght.ttf" id="2_0ykhv"]
[ext_resource type="PackedScene" uid="uid://dh5bep4wwtggd" path="res://scenes/Game.tscn" id="2_ow34m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wh52"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node2D" node_paths=PackedStringArray("menu_camera", "message_dialog", "main_screen", "host_screen", "join_screen")]
script = ExtResource("1_2wh52")
menu_camera = NodePath("MenuCamera")
message_dialog = NodePath("MenuCamera/CanvasLayer/MessageDialog")
main_screen = NodePath("MainScreen")
host_screen = NodePath("HostScreen")
join_screen = NodePath("JoinScreen")
game_scene = ExtResource("2_ow34m")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -985.0
offset_top = -1154.0
offset_right = 2841.0
offset_bottom = 1419.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yqorp")
stretch_mode = 6

[node name="MenuCamera" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="MenuCamera"]
layer = 5

[node name="MessageDialog" type="MarginContainer" parent="MenuCamera/CanvasLayer"]
visible = false
custom_minimum_size = Vector2(960, 540)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="MenuCamera/CanvasLayer/MessageDialog"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2wh52")

[node name="Controls" type="VBoxContainer" parent="MenuCamera/CanvasLayer/MessageDialog/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.5
offset_top = -88.0
offset_right = 326.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ErrMessageLbl" type="Label" parent="MenuCamera/CanvasLayer/MessageDialog/Panel/Controls"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "Please input a valid code"
horizontal_alignment = 1

[node name="CancelBtn" type="Button" parent="MenuCamera/CanvasLayer/MessageDialog/Panel/Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   OK   "

[node name="GameLayer" type="CanvasLayer" parent="MenuCamera"]
unique_name_in_owner = true

[node name="MainScreen" type="Node2D" parent="."]

[node name="Controls" type="VBoxContainer" parent="MainScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -92.0
offset_right = 212.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HostBtn" type="Button" parent="MainScreen/Controls"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   Host Game   "

[node name="JoinBtn" type="Button" parent="MainScreen/Controls"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   Join Game   "

[node name="HostScreen" type="Node2D" parent="."]
position = Vector2(1920, -540)

[node name="Controls" type="VBoxContainer" parent="HostScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.5
offset_top = -88.0
offset_right = 326.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HostIPLbl" type="Label" parent="HostScreen/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "127.0.0.1"
horizontal_alignment = 1

[node name="HostCodeLbl" type="Label" parent="HostScreen/Controls"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "Host Code: XXXXXXXX"
horizontal_alignment = 1

[node name="CancelBtn" type="Button" parent="HostScreen/Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   Cancel   "

[node name="JoinScreen" type="Node2D" parent="."]
position = Vector2(1465, 744)

[node name="Controls" type="VBoxContainer" parent="JoinScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -326.5
offset_top = -88.0
offset_right = 326.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="JoinScreen/Controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="HostCodeLbl" type="Label" parent="JoinScreen/Controls/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "Code:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostCodeInput" type="LineEdit" parent="JoinScreen/Controls/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
placeholder_text = "XXXXXXXX"
alignment = 1
max_length = 8
expand_to_text_length = true
emoji_menu_enabled = false
clear_button_enabled = true

[node name="Keys" type="HBoxContainer" parent="JoinScreen/Controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="0" type="Button" parent="JoinScreen/Controls/Keys"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   0   "

[node name="1" type="Button" parent="JoinScreen/Controls/Keys"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   1   "

[node name="2" type="Button" parent="JoinScreen/Controls/Keys"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   2   "

[node name="3" type="Button" parent="JoinScreen/Controls/Keys"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   3   "

[node name="Keys2" type="HBoxContainer" parent="JoinScreen/Controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="4" type="Button" parent="JoinScreen/Controls/Keys2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   4   "

[node name="5" type="Button" parent="JoinScreen/Controls/Keys2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   5   "

[node name="6" type="Button" parent="JoinScreen/Controls/Keys2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   6   "

[node name="7" type="Button" parent="JoinScreen/Controls/Keys2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   7   "

[node name="Keys3" type="HBoxContainer" parent="JoinScreen/Controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="8" type="Button" parent="JoinScreen/Controls/Keys3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   8   "

[node name="9" type="Button" parent="JoinScreen/Controls/Keys3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   9   "

[node name="10" type="Button" parent="JoinScreen/Controls/Keys3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   A   "

[node name="11" type="Button" parent="JoinScreen/Controls/Keys3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   B   "

[node name="Keys4" type="HBoxContainer" parent="JoinScreen/Controls"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="12" type="Button" parent="JoinScreen/Controls/Keys4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   C   "

[node name="13" type="Button" parent="JoinScreen/Controls/Keys4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   D   "

[node name="14" type="Button" parent="JoinScreen/Controls/Keys4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   E   "

[node name="15" type="Button" parent="JoinScreen/Controls/Keys4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   F   "

[node name="HBoxContainer2" type="HBoxContainer" parent="JoinScreen/Controls"]
layout_mode = 2

[node name="DeleteCharBtn" type="Button" parent="JoinScreen/Controls/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "  Delete   "

[node name="JoinGameBtn" type="Button" parent="JoinScreen/Controls/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   Join Game   "

[node name="CancelBtn" type="Button" parent="JoinScreen/Controls/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_0ykhv")
theme_override_font_sizes/font_size = 64
text = "   Cancel   "

[connection signal="pressed" from="MenuCamera/CanvasLayer/MessageDialog/Panel/Controls/CancelBtn" to="." method="_on_close_msg_btn_pressed"]
[connection signal="pressed" from="MainScreen/Controls/HostBtn" to="." method="_on_host_btn_pressed"]
[connection signal="pressed" from="MainScreen/Controls/JoinBtn" to="." method="_on_join_btn_pressed"]
[connection signal="pressed" from="HostScreen/Controls/CancelBtn" to="." method="_on_cancel_btn_pressed"]
[connection signal="pressed" from="JoinScreen/Controls/Keys/0" to="." method="_on_ip_btn_pressed" binds= ["0"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys/1" to="." method="_on_ip_btn_pressed" binds= ["1"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys/2" to="." method="_on_ip_btn_pressed" binds= ["2"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys/3" to="." method="_on_ip_btn_pressed" binds= ["3"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys2/4" to="." method="_on_ip_btn_pressed" binds= ["4"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys2/5" to="." method="_on_ip_btn_pressed" binds= ["5"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys2/6" to="." method="_on_ip_btn_pressed" binds= ["6"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys2/7" to="." method="_on_ip_btn_pressed" binds= ["7"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys3/8" to="." method="_on_ip_btn_pressed" binds= ["8"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys3/9" to="." method="_on_ip_btn_pressed" binds= ["9"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys3/10" to="." method="_on_ip_btn_pressed" binds= ["A"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys3/11" to="." method="_on_ip_btn_pressed" binds= ["B"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys4/12" to="." method="_on_ip_btn_pressed" binds= ["C"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys4/13" to="." method="_on_ip_btn_pressed" binds= ["D"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys4/14" to="." method="_on_ip_btn_pressed" binds= ["E"]]
[connection signal="pressed" from="JoinScreen/Controls/Keys4/15" to="." method="_on_ip_btn_pressed" binds= ["F"]]
[connection signal="pressed" from="JoinScreen/Controls/HBoxContainer2/DeleteCharBtn" to="." method="_on_delete_char_btn_pressed"]
[connection signal="pressed" from="JoinScreen/Controls/HBoxContainer2/JoinGameBtn" to="." method="_on_join_game_btn_pressed"]
[connection signal="pressed" from="JoinScreen/Controls/HBoxContainer2/CancelBtn" to="." method="_on_cancel_btn_pressed"]
